[tool.poetry]
name = "tg-analysis"
version = "0.1.0"
description = ""
authors = ["kachus <ka4usova.e@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Telethon = "^1.25.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
